basic login and logout

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,6 +7,12 @@
         android:title="@string/buttonlabel_newphoto"/>
     
     <item
+        android:id="@+id/logout"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/buttonlabel_logout"/>
+    
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
