--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -1,6 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    
+    <!--  Dummy item to prevent auto focus on form -->
+    <LinearLayout
+    android:focusable="true" android:focusableInTouchMode="true"
+    android:layout_width="0px" android:layout_height="0px"/>
 
     <EditText
         android:id="@+id/loginUsername"
@@ -9,6 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="102dp"
+        android:focusable="true"
         android:ems="10"
         android:hint="@string/textfieldlabel_username"
         android:inputType="text" />
@@ -33,13 +39,13 @@
         android:layout_marginTop="26dp"
         android:text="@string/buttonlabel_login" />
 
-    <Button
-        android:id="@+id/goToSignUpButton"
+    <TextView
+        android:id="@+id/goToSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/loginButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_below="@+id/loginButton"
+        android:layout_marginTop="32dp"
         android:text="@string/label_signuplink" />
 
 </RelativeLayout>
