--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,15 +7,16 @@
         android:title="@string/buttonlabel_newphoto"/>
     
     <item
-        android:id="@+id/logout"
+        android:id="@+id/refresh"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:title="@string/buttonlabel_logout"/>
+        android:title="@string/buttonlabel_refresh"/>
     
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/logout"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="ifRoom"
+        android:title="@string/buttonlabel_logout"/>
+ 
    
 </menu>
