--- a/res/layout/activity_detail.xml
+++ b/res/layout/activity_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/FrameLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -7,9 +8,14 @@
         android:id="@+id/imageView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:scaleType="fitXY"
         android:src="@drawable/blur" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/imageMask"
+        android:layout_width="1200dp"
+        android:layout_height="1200dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/blur2" />
+
+</FrameLayout>
