--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,18 +4,20 @@
         android:id="@+id/new_photo"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:title="@string/buttonlabel_newphoto"/>
+        android:icon="@drawable/ic_action_camera"
+        android:title="@string/buttonlabel_newphoto" />
     
     <item
         android:id="@+id/refresh"
         android:orderInCategory="100"
         android:showAsAction="always"
+        android:icon="@drawable/ic_action_refresh"
         android:title="@string/buttonlabel_refresh"/>
     
     <item
         android:id="@+id/logout"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom"
+        android:showAsAction="never"
         android:title="@string/buttonlabel_logout"/>
  
    
