--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -38,13 +38,22 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:text="@string/buttonlabel_login" />
+      
+      <ProgressBar
+         android:id="@+id/loader"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+        
+         android:layout_centerHorizontal="true"
+         android:layout_below="@+id/loginButton"
+          />
 
     <TextView
         android:id="@+id/goToSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/loginButton"
+        android:layout_below="@+id/loader"
         android:layout_marginTop="32dp"
         android:text="@string/label_signuplink" />
 
