--- a/res/layout/activity_new_photo.xml
+++ b/res/layout/activity_new_photo.xml
@@ -11,8 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/blur" />
+        android:scaleType="fitXY" />
 
     <EditText
         android:id="@+id/photoQuestion"
