--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:theme="@style/ElephantMenu" >
  
     <item
         android:id="@+id/new_photo"
@@ -18,6 +19,7 @@
         android:id="@+id/logout"
         android:orderInCategory="100"
         android:showAsAction="never"
+        android:theme="@style/ElephantMenu"
         android:title="@string/buttonlabel_logout"/>
  
    
