--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,17 +4,14 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+ 
+    
+    <style name="Elephant" parent="android:Theme.Holo.Light">
+        <item name="android:textColor">#ffffff</item>
     </style>
-
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    
+    <style name="ElephantMenu" parent="Elephant">
+        <item name="android:textColor">#959595</item>
     </style>
 
 </resources>
