--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -8,7 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp" >
+        android:layout_marginTop="0dp"
+         >
+
     </RelativeLayout>
 
 </RelativeLayout>
