--- a/res/layout/activity_new_photo.xml
+++ b/res/layout/activity_new_photo.xml
@@ -1,38 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/FrameLayout1"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent" >
 
     <ImageView
         android:id="@+id/imagePreview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:scaleType="fitXY" />
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        tools:ignore="ContentDescription" />
 
-    <EditText
-        android:id="@+id/photoQuestion"
+    <ImageView
+        android:id="@+id/imageMask"
+        android:layout_width="1200dp"
+        android:layout_height="1920dp"
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        android:src="@drawable/mask"
+        tools:ignore="ContentDescription" />
+
+    <!-- Dummy item to prevent auto focus on form -->
+
+    <LinearLayout
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        tools:ignore="UselessLeaf" />
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp"
-        android:ems="10"
-        android:hint="@string/label_photo_question" >
+        android:layout_gravity="bottom|center"
+        android:paddingLeft="30dp"
+	    android:paddingRight="30dp"
+        android:paddingBottom="100dp" >
+     
+	        <EditText
+	            android:id="@+id/photoQuestion"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_centerHorizontal="true"
+	            android:layout_alignParentTop="true"
+	            android:gravity="center"
+	            android:layout_marginTop="20dp"
+	            android:hint="@string/message_photo_question"
+	            android:textColorHint="@color/lightblue"
+	            android:inputType="text|textNoSuggestions" >
+	        </EditText>
+	
+	        <Button
+	            android:id="@+id/newPhotoButton"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_below="@+id/photoQuestion"
+	            android:layout_centerHorizontal="true"
+	            android:layout_marginTop="30dp"
+	            android:background="@drawable/custom_button_green"
+	            android:text="@string/buttonlabel_uploadphoto" />
+   
+    </RelativeLayout>
 
-        <requestFocus />
-    </EditText>
-
-    <Button
-        android:id="@+id/newPhotoButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/photoQuestion"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:text="@string/ok" />
-
-</RelativeLayout>
+</FrameLayout>
