--- a/res/layout/adapter_item.xml
+++ b/res/layout/adapter_item.xml
@@ -2,16 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="40dp"
+    android:paddingBottom="20dp"
     android:orientation="vertical" >
     
-
+    
     <com.parse.ParseImageView
         android:id="@+id/icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-         android:layout_marginTop="10dp"  />
+          />
 
     <TextView
         android:id="@+id/question"
@@ -19,14 +21,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/icon"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:textColor="@color/blue1"
+         />
 
     <TextView
         android:id="@+id/senderName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/question"
-        android:layout_centerHorizontal="true"
-      />
+        android:layout_centerHorizontal="true"  />
 
 </RelativeLayout>
