--- a/res/layout/fragment_signup.xml
+++ b/res/layout/fragment_signup.xml
@@ -8,38 +8,49 @@
     android:focusable="true" android:focusableInTouchMode="true"
     android:layout_width="0px" android:layout_height="0px"/>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:layout_centerVertical="true"
+    	android:layout_centerHorizontal="true"
+    	>
+    
     <EditText
         android:id="@+id/signupUsername"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="170dp"
-        android:ems="10"
-        android:hint="@string/textfieldlabel_username"
-        android:inputType="text" >
+        android:gravity="center" 
+        android:focusable="true"
+        android:hint="@string/hint_username"
+        android:inputType="text|textNoSuggestions" >
 
-        <requestFocus />
     </EditText>
 
     <EditText
         android:id="@+id/signupPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signupUsername"
         android:layout_centerHorizontal="true"
+        android:gravity="center" 
         android:layout_marginTop="25dp"
-        android:ems="10"
-        android:hint="@string/textfieldlabel_password"
+        android:hint="@string/hint_password"
         android:inputType="textPassword" />
+    
+    
 
     <Button
         android:id="@+id/signupButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signupPassword"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="26dp"
+        android:background="@drawable/custom_button"
         android:text="@string/buttonlabel_signup" />
+
+</RelativeLayout>    
 
 </RelativeLayout>
