--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,17 +1,19 @@
 <resources>
-
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
  
+    <color name="white">#ffffff</color>
+    <color name="lightgrey">#ebebeb</color>
+    <color name="lightblue">#7ad0f1</color>
+    <color name="blue1">#00aeef</color>
+    <color name="blue2">#0099d3</color>
+    <color name="green1">#99CC00</color>
+    <color name="green2">#669900</color>
     
-    <style name="Elephant" parent="android:Theme.Holo.Light">
-        <item name="android:textColor">#ffffff</item>
+    <style name="Elephant" parent="android:Theme.Holo">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item> 
+        <item name="android:textSize">18sp</item>    
+       <item name="android:actionMenuTextAppearance">@android:style/Widget.Holo.Light.ActionBar</item>
     </style>
-    
-    <style name="ElephantMenu" parent="Elephant">
-        <item name="android:textColor">#959595</item>
-    </style>
+ 
 
 </resources>
