--- a/res/layout/fragment_signup.xml
+++ b/res/layout/fragment_signup.xml
@@ -14,10 +14,11 @@
     	android:layout_centerVertical="true"
     	android:layout_centerHorizontal="true"
     	>
-    
+    	
+    <!-- Username field -->
     <EditText
         android:id="@+id/signupUsername"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -25,12 +26,12 @@
         android:focusable="true"
         android:hint="@string/hint_username"
         android:inputType="text|textNoSuggestions" >
-
     </EditText>
-
+	
+    <!-- Password field -->
     <EditText
         android:id="@+id/signupPassword"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signupUsername"
         android:layout_centerHorizontal="true"
@@ -39,11 +40,10 @@
         android:hint="@string/hint_password"
         android:inputType="textPassword" />
     
-    
-
+	<!-- Submit button -->
     <Button
         android:id="@+id/signupButton"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signupPassword"
         android:layout_centerHorizontal="true"
