--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,7 +1,13 @@
 <resources>
  
     <color name="white">#ffffff</color>
-    <color name="lightgrey">#ebebeb</color>
+    
+    <color name="lightgrey">#f3f3f3</color>
+    <color name="lightgrey2">#cdcdcd</color>
+    
+    <color name="grey">#32393d</color>
+    <color name="grey2">#94999c</color>    
+    
     <color name="lightblue">#7ad0f1</color>
     <color name="blue1">#00aeef</color>
     <color name="blue2">#0099d3</color>
@@ -10,7 +16,7 @@
     
     <style name="Elephant" parent="android:Theme.Holo">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textColorHint">@color/white</item> 
+        <!-- <item name="android:textColorHint">@color/white</item> -->
         <item name="android:textSize">18sp</item>    
        <item name="android:actionMenuTextAppearance">@android:style/Widget.Holo.Light.ActionBar</item>
     </style>
