added date to photo items in list, style updates

--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -21,10 +21,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp"
-        android:gravity="center" 
         android:focusable="true"
+        android:gravity="center"
         android:hint="@string/hint_username"
-        android:inputType="text|textNoSuggestions" />
+        android:inputType="text|textNoSuggestions"
+        android:typeface="sans" />
 
     <EditText
         android:id="@+id/loginPassword"
@@ -33,18 +34,19 @@
         android:layout_alignLeft="@+id/loginUsername"
         android:layout_below="@+id/loginUsername"
         android:layout_centerHorizontal="true"
-        android:gravity="center" 
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="18dp"
+        android:gravity="center"
         android:hint="@string/hint_password"
-        android:inputType="textWebPassword" />
+        android:inputType="textWebPassword"
+        android:typeface="sans" />
     
       <Button
         android:id="@+id/loginButton"
-        android:layout_width="240dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/loginPassword"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/custom_button"
         android:text="@string/buttonlabel_login" />
  
