--- a/res/layout/fragment_comments.xml
+++ b/res/layout/fragment_comments.xml
@@ -45,6 +45,7 @@
                 android:id="@+id/photoinfo_arrow"
                 android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
+	        	android:layout_marginTop="4dp"
 	        	android:contentDescription="@string/default_description"
                 android:src="@drawable/arrow_down" />
         
