--- a/res/layout/fragment_signup.xml
+++ b/res/layout/fragment_signup.xml
@@ -24,6 +24,7 @@
         android:layout_centerHorizontal="true"
         android:gravity="center" 
         android:focusable="true"
+        android:typeface="sans"
         android:hint="@string/hint_username"
         android:inputType="text|textNoSuggestions" >
     </EditText>
@@ -36,18 +37,19 @@
         android:layout_below="@+id/signupUsername"
         android:layout_centerHorizontal="true"
         android:gravity="center" 
-        android:layout_marginTop="25dp"
-        android:hint="@string/hint_password"
-        android:inputType="textPassword" />
+        android:layout_marginTop="18dp"
+        android:typeface="sans"
+        android:inputType="textWebPassword"
+        android:hint="@string/hint_password"/>
     
 	<!-- Submit button -->
     <Button
         android:id="@+id/signupButton"
-        android:layout_width="240dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signupPassword"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/custom_button"
         android:text="@string/buttonlabel_signup" />
 
