--- a/res/layout/adapter_photo_item.xml
+++ b/res/layout/adapter_photo_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="50dp"
-    android:paddingBottom="40dp"
+    android:paddingBottom="42dp"
     android:orientation="vertical" >
     
     <TextView
@@ -13,23 +13,36 @@
         android:layout_alignParentTop="true"
         android:textColor="@color/lightgrey2"
         android:textSize="15sp"
+        android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"  />
     
-    
-    <com.parse.ParseImageView
-        android:id="@+id/icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <RelativeLayout
+        android:id="@+id/iconContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/date"
-        android:layout_marginTop="20dp"
-          />
+        android:layout_below="@+id/date">
+        
+        <View android:layout_width="104dp"
+    	android:layout_height="104dp"
+    	android:layout_centerHorizontal="true"
+    	android:layout_centerVertical="true"
+    	android:background="@drawable/circle_bg"/>
+
+	    <com.parse.ParseImageView
+	        android:id="@+id/icon"
+	        android:layout_width="100dp"
+	        android:layout_height="100dp"
+	        android:layout_centerHorizontal="true"
+	        android:layout_centerVertical="true"
+	          />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/icon"
+        android:layout_below="@+id/iconContainer"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:textColor="@color/blue1"
