--- a/res/layout/fragment_comments.xml
+++ b/res/layout/fragment_comments.xml
@@ -18,6 +18,33 @@
         android:paddingBottom="10dp"
         android:baselineAligned="false" >
         
+       <!-- Chat icon -->
+       <RelativeLayout 
+            android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="-3dp"
+	        android:layout_marginRight="12dp">
+	        
+        <ImageView 
+                android:id="@+id/photoinfo_chat"
+                android:layout_width="wrap_content"
+	        	android:layout_height="wrap_content"	   
+	        	android:layout_centerHorizontal="true"     	
+	        	android:contentDescription="@string/default_description"
+                android:src="@drawable/ic_action_chat" />
+        
+         <TextView
+            android:id="@+id/photoinfo_comments_num"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/photoinfo_chat"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="-6dp"
+	        android:paddingRight="4dp"
+	        android:gravity="center" />
+        
+        </RelativeLayout>
+        
         <RelativeLayout 
             android:layout_width="0dip"
 	        android:layout_height="wrap_content"
@@ -40,12 +67,13 @@
 	        android:text="" />
             
         </RelativeLayout>
-        
+ 
+ 		<!-- Sliding drawer opened / closed icon  -->       
         <ImageView 
                 android:id="@+id/photoinfo_arrow"
                 android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
-	        	android:layout_marginTop="4dp"
+	        	android:layout_marginTop="6dp"
 	        	android:contentDescription="@string/default_description"
                 android:src="@drawable/arrow_down" />
         
