--- a/res/layout/fragment_signup.xml
+++ b/res/layout/fragment_signup.xml
@@ -14,56 +14,65 @@
     	android:layout_centerVertical="true"
     	android:layout_centerHorizontal="true">
     	
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@string/default_description"
+            android:src="@drawable/elephant" />
+    	
         
        <TextView
-       android:id="@+id/welcomeSignup"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentTop="true"
-       android:layout_centerHorizontal="true"
-       android:layout_marginTop="0dp"
-       android:text="@string/label_welcome_signup"
-       android:gravity="center"
-       android:textSize="28sp" />
+	       android:id="@+id/welcomeSignup"
+	       android:layout_width="wrap_content"
+	       android:layout_height="wrap_content"
+	       android:layout_centerHorizontal="true"
+	       android:layout_below="@+id/logo"
+	       android:layout_marginTop="8dp"
+	       android:text="@string/label_welcome_signup"
+	       android:gravity="center"
+	       android:textSize="28sp" />
     	
-    <!-- Username field -->
-    <EditText
-        android:id="@+id/signupUsername"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/welcomeSignup"
-        android:layout_marginTop="32dp"
-        android:gravity="center" 
-        android:focusable="true"
-        android:typeface="sans"
-        android:hint="@string/hint_username"
-        android:inputType="text|textNoSuggestions" >
-    </EditText>
-	
-    <!-- Password field -->
-    <EditText
-        android:id="@+id/signupPassword"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/signupUsername"
-        android:layout_centerHorizontal="true"
-        android:gravity="center" 
-        android:layout_marginTop="18dp"
-        android:typeface="sans"
-        android:inputType="textWebPassword"
-        android:hint="@string/hint_password"/>
-    
-	<!-- Submit button -->
-    <Button
-        android:id="@+id/signupButton"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/signupPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/custom_button"
-        android:text="@string/buttonlabel_signup" />
+	    <!-- Username field -->
+	    <EditText
+	        android:id="@+id/signupUsername"
+	        android:layout_width="240dp"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:layout_below="@+id/welcomeSignup"
+	        android:layout_marginTop="32dp"
+	        android:gravity="center" 
+	        android:focusable="true"
+	        android:typeface="sans"
+	        android:hint="@string/hint_username"
+	        android:inputType="text|textNoSuggestions" >
+	    </EditText>
+		
+	    <!-- Password field -->
+	    <EditText
+	        android:id="@+id/signupPassword"
+	        android:layout_width="240dp"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/signupUsername"
+	        android:layout_centerHorizontal="true"
+	        android:gravity="center" 
+	        android:layout_marginTop="18dp"
+	        android:typeface="sans"
+	        android:inputType="textWebPassword"
+	        android:hint="@string/hint_password"/>
+	    
+		<!-- Submit button -->
+	    <Button
+	        android:id="@+id/signupButton"
+	        android:layout_width="200dp"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/signupPassword"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="36dp"
+	        android:background="@drawable/custom_button"
+	        android:text="@string/buttonlabel_signup" />
 
 </RelativeLayout>    
 
