--- a/res/layout-large/fragment_login.xml
+++ b/res/layout-large/fragment_login.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/blur"  >
+    android:background="@drawable/blur" >
     
     <!--  Dummy item to prevent auto focus on form -->
     <LinearLayout
@@ -13,79 +12,76 @@
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:layout_centerVertical="true"
-    	android:layout_centerHorizontal="true">
+    	android:layout_centerHorizontal="true"
+    	>
     	
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:contentDescription="@string/default_description"
             android:src="@drawable/elephant" />
     	
-        
-       <TextView
-	       android:id="@+id/welcomeSignup"
+	   <TextView
+	       android:id="@+id/welcome"
 	       android:layout_width="wrap_content"
 	       android:layout_height="wrap_content"
 	       android:layout_centerHorizontal="true"
 	       android:layout_below="@+id/logo"
-	       android:layout_marginTop="0dp"
-	       android:text="@string/label_welcome_signup"
+	       android:layout_marginTop="8dp"
+	       android:text="@string/label_welcome"
 	       android:gravity="center"
 	       android:textSize="26sp" />
-    	 
-	    <!-- Username field -->
+	        
 	    <EditText
-	        android:id="@+id/signupUsername"
+	        android:id="@+id/loginUsername"
 	        android:layout_width="240dp"
 	        android:layout_height="wrap_content"
 	        android:layout_centerHorizontal="true"
-	        android:layout_below="@+id/welcomeSignup"
-	        android:layout_marginTop="16dp"
-	        android:gravity="center" 
+	        android:layout_below="@+id/welcome"
+	        android:layout_marginTop="32dp"
 	        android:focusable="true"
-	        android:typeface="sans"
+	        android:gravity="center"
 	        android:hint="@string/hint_username"
-	        android:inputType="text|textNoSuggestions" >
-	    </EditText>
-		    
-	    <!-- Password field -->
+	        android:inputType="text|textNoSuggestions"
+	        android:typeface="sans" />
+	
 	    <EditText
-	        android:id="@+id/signupPassword"
+	        android:id="@+id/loginPassword"
 	        android:layout_width="240dp"
 	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/signupUsername"
+	        android:layout_alignLeft="@+id/loginUsername"
+	        android:layout_below="@+id/loginUsername"
 	        android:layout_centerHorizontal="true"
-	        android:gravity="center" 
-	        android:layout_marginTop="9dp"
-	        android:typeface="sans"
+	        android:layout_marginTop="18dp"
+	        android:gravity="center"
+	        android:hint="@string/hint_password"
 	        android:inputType="textWebPassword"
-	        android:hint="@string/hint_password"/>
+	        android:typeface="sans" />
 	    
-		<!-- Submit button -->
-	    <Button
-	        android:id="@+id/signupButton"
+	      <Button
+	        android:id="@+id/loginButton"
 	        android:layout_width="200dp"
 	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/signupPassword"
+	        android:layout_below="@+id/loginPassword"
 	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="13dp"
+	        android:layout_marginTop="26dp"
 	        android:background="@drawable/custom_button"
-	        android:text="@string/buttonlabel_signup" />
-	    
-	    <!-- Displays signup errors -->
-	    <TextView
+	        android:text="@string/buttonlabel_login" />
+	      
+	      <!-- Displays login errors -->
+	      <TextView
 	          android:id="@+id/error"
 	          android:layout_width="wrap_content"
 	          android:layout_height="wrap_content"
-	          android:layout_below="@+id/signupButton"
+	          android:layout_below="@+id/loginButton"
 	          android:layout_centerHorizontal="true"
-	          android:layout_marginTop="9dp"
+	          android:layout_marginTop="18dp"
 	          android:gravity="center"
 	          android:textSize="15sp" />
-
-</RelativeLayout>    
+ 
+</RelativeLayout>
 
 </RelativeLayout>
