--- a/res/menu/login.xml
+++ b/res/menu/login.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     
-	<item
+    <item
+        android:id="@+id/goToLogin"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/buttonlabel_login"/>
+    
+    <item
         android:id="@+id/goToSignup"
         android:orderInCategory="100"
         android:showAsAction="always"
